--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bonik-shop",
+  "name": "meanfi-shop",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,6 +21,7 @@
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
+    "sweetalert2": "^11.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
